tests/ui/bad_escape.stderr
Error [E0001]: `\p` isn't an escape Lex knows
  --> tests/ui/bad_escape.lex:2:14
    |
  2 |     print("C:\path");
    |              ^^
 Why: inside quoted text, `\` starts an escape: `\n` (new line), `\t` (tab), `\"` (quote), `\\` (backslash)
 Fix: write `\\` for a real backslash
